# grepapp

./: CMakeLists.txt  README.md  appfactory.cpp  appfactory.h  application.cpp  application.h  filesys.cpp  filesys.h  functor.cpp  functor.h  grep_tests.sh  highlightconsole.cpp  highlightconsole.h  main.cpp
